downgrade to jdk8